[gd_scene load_steps=6 format=3 uid="uid://cfmunflda7188"]

[ext_resource type="Script" path="res://scripts/screens/results_screen.gd" id="1_n660e"]
[ext_resource type="FontFile" uid="uid://dm2rmmhs7n068" path="res://assets/fonts/slkscr.ttf" id="2_3lal6"]
[ext_resource type="Texture2D" uid="uid://c3t38au3r2l0q" path="res://assets/win_loss_sprites/win-screen.png" id="3_g1hxf"]
[ext_resource type="Texture2D" uid="uid://ckf8x3i1geqmn" path="res://assets/win_loss_sprites/loss-screen.png" id="4_14iu0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r2led"]
bg_color = Color(0.0295066, 0.0295066, 0.0295066, 1)

[node name="ResultsScreen" type="CanvasLayer"]
script = ExtResource("1_n660e")

[node name="Panel" type="Panel" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxFlat_r2led")
metadata/_edit_lock_ = true

[node name="SmallMessage" type="Label" parent="."]
visible = false
z_index = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 126.0
offset_top = 335.0
offset_right = 891.0
offset_bottom = 554.0
grow_horizontal = 2
pivot_offset = Vector2(1198, -60)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_3lal6")
theme_override_font_sizes/font_size = 70
text = "You live to
gamble 
another day..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="BigMessage" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -552.0
offset_top = 59.0
offset_right = 543.0
offset_bottom = 260.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.903598, 0.903598, 0.903598, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_3lal6")
theme_override_font_sizes/font_size = 200
text = "YOU WIN!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -337.0
offset_top = 331.0
offset_right = -297.0
offset_bottom = 372.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 98.0
offset_top = -141.0
offset_right = 561.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="BackButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3lal6")
theme_override_font_sizes/font_size = 40
text = "Return to Title"
icon_alignment = 1

[node name="QuitButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3lal6")
theme_override_font_sizes/font_size = 40
text = "Quit
"
icon_alignment = 1

[node name="CreditsButton" type="Button" parent="Control/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3lal6")
theme_override_font_sizes/font_size = 40
text = "Credits"
icon_alignment = 1

[node name="WinScreen" type="Sprite2D" parent="."]
position = Vector2(966, 576.5)
scale = Vector2(1.2, 1.21667)
texture = ExtResource("3_g1hxf")

[node name="LossScreen" type="Sprite2D" parent="."]
position = Vector2(966, 578)
scale = Vector2(1.1, 1.11333)
texture = ExtResource("4_14iu0")

[connection signal="pressed" from="Control/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
